# GHOSTSHELL

./: Cargo.toml  GhostDash.md  GhostLog.md  GhostReport.md  GhostScript.md  Interface.md  Overview.md  PHASE3_FEATURES.md  PHASE4_IMPLEMENTATION.md  PHASE5_IMPLEMENTATION.md  PHASE6_IMPLEMENTATION.md  PHASE7_IMPLEMENTATION.md  PHASE8_PLANNING.md  Phase10.md  Phase11.md  Phase12.md  Phase13.md  Phase14.md  Phase16.md  Phase8.md  Phase9.md  README.md  WindowControlSolution.md  package-lock.json  package.json  pan_evaluator.md  phase1.md  phase15.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  run.bat  run.py  run.sh  setup_complete_databases.py  setup_databases.py  svelte.config.js  (+9 more)
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/server/: index.js  internal.js  manifest-full.js  manifest.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/chunks/: AiAssistant.js  AristaEngine.js  GhostDash.js  (+62 more)
crates/ghost_ai/: Cargo.toml
crates/ghost_ai/src/: classifier.rs  engine.rs  lib.rs  suggestion.rs
crates/ghost_alert/: Cargo.toml
crates/ghost_alert/src/: formatters.rs  lib.rs  ui_models.rs
crates/ghost_align/: Cargo.toml
crates/ghost_align/src/: evaluator.rs  lib.rs  scoring.rs  signals.rs
crates/ghost_autofill/: Cargo.toml
crates/ghost_autofill/src/: bridge.rs  credentials.rs  injector.rs  lib.rs
crates/ghost_browse/: Cargo.toml
crates/ghost_browse/src/: browser.rs  engine.rs  lib.rs  tab.rs  webview.rs
crates/ghost_controls/: Cargo.toml
crates/ghost_controls/src/: catalog.rs  lib.rs  mappings.rs
crates/ghost_dash/: Cargo.toml
crates/ghost_dash/src/: analytics.rs  collectors.rs  dashboard.rs  exports.rs  lib.rs  system.rs  system_simple.rs  tables.rs
crates/ghost_download/: Cargo.toml
crates/ghost_download/src/: lib.rs  manager.rs  metadata.rs  sealer.rs
crates/ghost_errmap/: Cargo.toml
crates/ghost_errmap/src/: compliance_errors.rs  lib.rs  ssh_errors.rs  terminal_errors.rs  vault_errors.rs  vpn_errors.rs
crates/ghost_evidence/: Cargo.toml
crates/ghost_evidence/src/: bundle.rs  export.rs  graph.rs  lib.rs
crates/ghost_explain/: Cargo.toml
crates/ghost_explain/src/: compliance_explainer.rs  control_explainer.rs  lib.rs  signal_explainer.rs
crates/ghost_link/: Cargo.toml
crates/ghost_link/src/: lib.rs  playbook_linker.rs  policy_linker.rs
crates/ghost_log/: Cargo.toml
crates/ghost_log/src/: chain.rs  daemon.rs  entry.rs  lib.rs  logger.rs  manifest.rs  query.rs  rotation.rs  search.rs  storage.rs  viewer.rs
crates/ghost_log/tests/: audit_tests.rs
crates/ghost_nav/: Cargo.toml
crates/ghost_nav/src/: layout.rs  lib.rs  policy.rs  presets.rs  validator.rs  workspace.rs
crates/ghost_notify/: Cargo.toml
crates/ghost_notify/src/: dispatcher.rs  engine.rs  lib.rs  rules.rs
crates/ghost_policy/: Cargo.toml
crates/ghost_policy/src/: context.rs  decision.rs  evaluator.rs  lib.rs  policy.rs
crates/ghost_policy/tests/: policy_tests.rs
crates/ghost_pq/: Cargo.toml
crates/ghost_pq/src/: envelope.rs  hash.rs  kem.rs  kms.rs  lib.rs  signatures.rs
crates/ghost_pq/tests/: integration_tests.rs
crates/ghost_prefs/: Cargo.toml
crates/ghost_prefs/src/: export.rs  import.rs  lib.rs  manager.rs  persistence.rs
crates/ghost_report/: Cargo.toml
crates/ghost_report/src/: archive.rs  builder.rs  engine.rs  exporters.rs  lib.rs  scheduler.rs  sources.rs  templates.rs
crates/ghost_script/: Cargo.toml
crates/ghost_script/src/: archive.rs  editor.rs  engine.rs  execution.rs  lib.rs  repository.rs  runners.rs
crates/ghost_theme/: Cargo.toml
crates/ghost_theme/src/: colors.rs  effects.rs  engine.rs  generator.rs  lib.rs  presets.rs
crates/ghost_tls/: Cargo.toml
crates/ghost_tls/src/: client.rs  config.rs  lib.rs  posture.rs
crates/ghost_trends/: Cargo.toml
crates/ghost_trends/src/: analysis.rs  lib.rs  rollup.rs  storage.rs
crates/ghost_vault/: Cargo.toml
crates/ghost_vault/src/: encryption.rs  lib.rs  mfa.rs  secrets.rs  storage.rs  vault.rs
crates/ghost_vault/tests/: vault_tests.rs
data/: ghostshell_audit.db  ghostshell_browser.db  ghostshell_clipboard.db  ghostshell_policy.db  ghostshell_quarantine.db  ghostshell_settings.db  ghostshell_theme.db  ghostshell_vault.db
logs/: ghostshell-debug.log.2025-08-29
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  build_output.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/logs/: ghostshell-debug.log.2025-08-28  ghostshell-debug.log.2025-08-29  ghostshell-debug.log.2025-08-30  ghostshell-debug.log.2025-08-31  ghostshell-debug.log.2025-09-01
src-tauri/src/: ai_assistant.rs  ai_security_engine.rs  ai_security_orchestrator.rs  api_gateway.rs  autonomous_soc.rs  behavioral_analytics.rs  clipboard.rs  compliance.rs  compliance_dashboard.rs  console_manager.rs  digital_consciousness.rs  embedded_nushell.rs  exploit_engine.rs  file_manager.rs  forensics_kit.rs  ghost_shell.rs  ghost_ssh.rs  global_threat_intelligence.rs  main.rs  multi_tenant.rs  network_topology.rs  neural_defense_grid.rs  orchestration.rs  pcap_studio.rs  predictive_security.rs  pty_shell.rs  quantum_cryptography.rs  quantum_forensics.rs  quantum_ml_engine.rs  quantum_safe_operations.rs  quarantine.rs  reality_defense.rs  remediation_playbooks.rs  reporting.rs  security.rs  security_automation.rs  shell_integration.rs  simple_shell.rs  ssh.rs  temporal_security.rs  (+10 more)
src-tauri/src/analysis/: analyzer.rs  data_structures.rs  exporter.rs  mod.rs
src-tauri/src/commands/: ai.rs  browse.rs  error_handling.rs  file_operations.rs  fonts.rs  ghostdash.rs  ghostlog.rs  ghostreport.rs  ghostscript.rs  layers.rs  mod.rs  navigation.rs  notify.rs  nushell.rs  pan_analysis.rs  pan_api.rs  pcap.rs  pcap_simple.rs  policy.rs  pure_executor.rs  settings.rs  shell.rs  surveyor.rs  theme.rs  theme_v2.rs  theme_vault.rs  vault.rs  vpn_status.rs
src-tauri/src/security/: pep.rs
src-tauri/tests/: integration_tests.rs
src/routes/: +layout.svelte  +page.svelte
(+595 files in other folders)
