[workspace]
members = [
    "src-tauri",
    "crates/ghost_pq",
    "crates/ghost_policy", 
    "crates/ghost_vault",
    "crates/ghost_log",
    "crates/ghost_align",
    "crates/ghost_controls",
    "crates/ghost_evidence",
    "crates/ghost_trends",
    "crates/ghost_notify",
    "crates/ghost_alert",
    "crates/ghost_theme",
    "crates/ghost_ai",
    "crates/ghost_errmap",
    "crates/ghost_explain",
    "crates/ghost_link",
    "crates/ghost_browse",
    "crates/ghost_tls",
    "crates/ghost_autofill",
    "crates/ghost_download"
]
resolver = "2"

[workspace.dependencies]
# Crypto dependencies
oqs = { version = "0.9", default-features = false, features = ["std", "dilithium", "kyber"] }
sha3 = "0.10"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Async/Error handling
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# Additional dependencies for Phase 12
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
zip = "0.6"
async-trait = "0.1"

# Additional dependencies for Phase 10 (Notifications)
reqwest = { version = "0.11", features = ["json"] }
regex = "1.0"

# Additional dependencies for Phase 11 (Theming)
colorsys = "0.6"
palette = "0.7"
css-color-parser = "0.1"

# Additional dependencies for Phase 13 (AI)
once_cell = "1.19"

# Additional dependencies for Phase 14 (Browser)
wry = "0.24"
tao = "0.16"
rustls = "0.21"
webpki-roots = "0.25"
tokio-rustls = "0.24"
