[package]
name = "ghost_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
hex = { workspace = true }

# Internal dependencies
ghost_log = { path = "../ghost_log" }
ghost_policy = { path = "../ghost_policy" }
ghost_pq = { path = "../ghost_pq" }
ghost_errmap = { path = "../ghost_errmap" }
ghost_explain = { path = "../ghost_explain" }
ghost_link = { path = "../ghost_link" }
