[package]
name = "ghost_autofill"
version = "0.1.0"
edition = "2021"
authors = ["GHOSTSHELL Team"]
description = "Vault autofill bridge for GHOSTSHELL browser"
license = "MIT"

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Internal crates
ghost_vault = { path = "../ghost_vault" }
ghost_policy = { path = "../ghost_policy" }
ghost_log = { path = "../ghost_log" }
ghost_pq = { path = "../ghost_pq" }
