[package]
name = "ghost_evidence"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sha3 = "0.10"
ghost_pq = { path = "../ghost_pq" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
zip = "0.6"
hex = "0.4"
base64 = "0.21"
thiserror = "1.0"
