[package]
name = "ghost_explain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Internal dependencies
ghost_align = { path = "../ghost_align" }
ghost_controls = { path = "../ghost_controls" }
