[package]
name = "ghost_policy"
version = "0.1.0"
edition = "2021"
description = "Policy engine for GHOSTSHELL security enforcement"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Regex for pattern matching
regex = "1.10"

# UUID for policy IDs
uuid = { version = "1.6", features = ["v4", "serde"] }
