[package]
name = "ghost_theme"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
ghost_log = { path = "../ghost_log" }
ghost_pq = { path = "../ghost_pq" }

# Color manipulation
colorsys = { workspace = true }
palette = { workspace = true }
rand = { workspace = true }

# CSS generation
css-color-parser = { workspace = true }
